--- a/index.html
+++ b/index.html
@@ -258,7 +258,19 @@
   </style>
 </head>
 <body>
-  <div id="auth-box" style="position: absolute; top: 10px; right: 10px; background: white; padding: 8px; border-radius: 8px; z-index: 1000;">
+  <div id="auth-box" style="
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: white;
+  padding: 10px 14px;
+  border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  font-family: system-ui, sans-serif;
+  font-size: 14px;
+  z-index: 1000;
+">
+
 
   <div id="auth-message">Checking login...</div>
   <button id="login-btn" style="margin-top: 2px;">Login with Google</button>
