--- a/index.html
+++ b/index.html
@@ -263,13 +263,18 @@
   top: 10px;
   right: 10px;
   background: white;
-  padding: 10px 14px;
-  border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  padding: 10px 12px;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
   font-family: system-ui, sans-serif;
-  font-size: 14px;
+  font-size: 13px;
+  font-weight: 600;
+  line-height: 1.4em;
+  color: black;
+  text-align: center;
   z-index: 1000;
 ">
+
 
 
   <div id="auth-message">Checking login...</div>
