--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
  <div id="legend-button-zone">
   <div id="legend-buttons-wrapper">
     <div id="music-btn" title="Music Settings">🎵</div>
-    <button id="exit-zone-btn">
+    <button id="exit-zone-btn" style="display: none;">
       <span style="font-size: 16px;">⬅</span>
       <span style="font-size: 15px; font-weight: 600; margin-left: 6px;">Exit</span>
     </button>
