--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
   let currentLayerDepth = 0; // 1 = county, 2 = township, 3 = roads
   let activeRoadName = null;
   let manheimLayer = null; // 🆕 Add at top with other let declarations
+  let lancasterLayer = null; // 🆕 Add alongside manheimLayer
   let hoverOverlay = null;
   let worldMask;
   let roadsLayerGroup = L.layerGroup(); // Holds all road layers
