--- a/index.html
+++ b/index.html
@@ -535,6 +535,65 @@ function updateAuthUI(user) {
     logoutBtn.style.display = 'none';
   }
 }
+function loadTownship(townshipName, geojsonPath, displayName, color) {
+  fetch(geojsonPath)
+    .then(res => res.json())
+    .then(townshipData => {
+      L.geoJSON(townshipData, {
+        pane: 'townshipPane',
+        style: {
+          color: 'black',
+          weight: 1.5,
+          fillColor: color,
+          fillOpacity: 0.25
+        },
+        onEachFeature: (feature, layer) => {
+          layer.on('mouseover', function () {
+            if (insideManheim) return;
+
+            const tooltip = document.getElementById('custom-tooltip');
+            const center = layer.getBounds().getCenter();
+            const screenPoint = map.latLngToContainerPoint(center);
+
+            tooltip.innerText = displayName;
+            tooltip.style.left = screenPoint.x + 'px';
+            tooltip.style.top = screenPoint.y + 'px';
+            tooltip.style.display = 'block';
+          });
+
+          layer.on('mouseout', function () {
+            document.getElementById('custom-tooltip').style.display = 'none';
+          });
+
+          layer.on('click', () => {
+            map.fitBounds(layer.getBounds(), { maxZoom: 15 });
+            console.log(`📍 ${displayName} clicked`);
+            currentLayerDepth = 2;
+            insideManheim = true;
+            manheimLayer = layer; // 🔁 Store for back logic
+
+            updateBackButtonVisibility();
+            layer.unbindTooltip();
+
+            layer.setStyle({
+              fillOpacity: 0,
+              weight: 1.5,
+              color: 'black',
+              opacity: 1
+            });
+
+            const mtPath = layer._path;
+            if (mtPath) {
+              mtPath.style.pointerEvents = 'none';
+              mtPath.style.outline = 'none';
+            }
+
+            // ➕ Add more township-specific logic here if needed
+          });
+        }
+      }).addTo(map);
+    });
+}
 
 
 async function loadGuessedSegmentIds() {
@@ -903,170 +962,52 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
         });
 
         layer.on('click', function () {
-          map.fitBounds(layer.getBounds());
-          currentLayerDepth = 2;
-updateBackButtonVisibility();
+  map.fitBounds(layer.getBounds());
+  currentLayerDepth = 2;
+  updateBackButtonVisibility();
 
-          insideLancaster = true;
-          lancasterLayer = layer;
+  insideLancaster = true;
+  lancasterLayer = layer;
 
-
-          if (!worldMask) {
-            worldMask = L.geoJSON(createWorldMask(feature), {
-              style: {
-                fillColor: '#cccccc',
-                fillOpacity: 0.7,
-                stroke: false,
-                pane: 'maskPane'
-              }
-            }).addTo(map);
-
-            worldMask.eachLayer(layer => {
-              const el = layer.getElement();
-              if (el) el.style.pointerEvents = 'none';
-            });
-          }
-
-          setTimeout(() => {
-            layer.setStyle({ fillOpacity: 0 });
-
-            const path = layer._path;
-            if (path) {
-              path.style.outline = 'none';
-              path.style.pointerEvents = 'none';
-            }
-
-            const mapContainer = map.getContainer();
-            if (mapContainer) {
-              mapContainer.blur();
-            }
-
-            // ✅ Load Manheim Township after zoom-in
-            fetch('Townships/Boundaries_Township_ManheimTownship_PA.geojson')
-              .then(r => r.json())
-              .then(mtData => {
-                L.geoJSON(mtData, {
-                  pane: 'townshipPane',
-                  style: {
-                    color: 'black',
-                    weight: 1.5,
-                    fillColor: '#ff8800',
-                    fillOpacity: 0.25
-                  },
-                  onEachFeature: (feature, mtLayer) => {
-                    mtLayer.on('mouseover', function () {
-  if (insideManheim) return;
-
-  const tooltip = document.getElementById('custom-tooltip');
-  const center = mtLayer.getBounds().getCenter();
-  const screenPoint = map.latLngToContainerPoint(center);
-
-  tooltip.innerText = "Manheim Township";
-  tooltip.style.left = screenPoint.x + 'px';
-  tooltip.style.top = screenPoint.y + 'px';
-  tooltip.style.display = 'block';
-});
-
-mtLayer.on('mouseout', function () {
-  const tooltip = document.getElementById('custom-tooltip');
-  tooltip.style.display = 'none';
-  tooltip.innerText = '';
-});
-mtLayer.on('mouseover', function () {
-  if (insideManheim) return; // already clicked
-
-  // 🧹 Remove old hover overlay if any
-  if (hoverOverlay) {
-    map.removeLayer(hoverOverlay);
-    hoverOverlay = null;
-  }
-
-  // 🟡 Add gold semi-transparent hover overlay
-  hoverOverlay = L.geoJSON(mtLayer.feature, {
-    pane: 'hoverPane', // we'll define this pane in step 3
-    style: {
-      fillColor: '#ffd700',
-      fillOpacity: 0.3,
-      color: 'black',
-      weight: 1,
-      opacity: 1
-    }
-  }).addTo(map);
-
-  // 🔒 Make hover overlay ignore pointer events
-  hoverOverlay.eachLayer(l => {
-    const el = l.getElement();
-    if (el) el.style.pointerEvents = 'none';
-  });
-});
-mtLayer.on('mouseout', function () {
-  if (hoverOverlay) {
-    map.removeLayer(hoverOverlay);
-    hoverOverlay = null;
-  }
-});
-
-
-
-
-                    mtLayer.on('click', () => {
-  map.fitBounds(mtLayer.getBounds(), { maxZoom: 15 });
-  console.log("📍 Manheim Township clicked");
-                      currentLayerDepth = 2;
-updateBackButtonVisibility();
-insideManheim = true;
-manheimLayer = mtLayer; // Store for back button logic
-
-
-                      mtLayer.unbindTooltip();
-
-
-  // 🔒 Disable interaction and fade MT polygon
-  mtLayer.setStyle({
-    fillOpacity: 0,
-    weight: 1.5,
-    color: 'black',
-    opacity: 1
-  });
-
-  const mtPath = mtLayer._path;
-  if (mtPath) {
-    mtPath.style.pointerEvents = 'none';
-    mtPath.style.outline = 'none';
-  }
-
-  // 🧱 Create mask that reveals only MT
-if (worldMask) {
-  map.removeLayer(worldMask);
-  worldMask = null;
-}
-
-worldMask = L.geoJSON(createWorldMask(feature), {
-  style: {
-    fillColor: '#cccccc',
-    fillOpacity: 0.7,
-    stroke: false,
-    pane: 'maskPane'
-  }
-}).addTo(map);
-
-worldMask.eachLayer(layer => {
-  const el = layer.getElement();
-  if (el) el.style.pointerEvents = 'none';
-});
-
-
-  // ✅ Show roads after MT is clicked
-  map.addLayer(roadsLayerGroup);
-});
-
-                  }
-                }).addTo(map);
-              });
-          }, 500);
-        });
+  if (!worldMask) {
+    worldMask = L.geoJSON(createWorldMask(feature), {
+      style: {
+        fillColor: '#cccccc',
+        fillOpacity: 0.7,
+        stroke: false,
+        pane: 'maskPane'
       }
     }).addTo(map);
+
+    worldMask.eachLayer(layer => {
+      const el = layer.getElement();
+      if (el) el.style.pointerEvents = 'none';
+    });
+  }
+
+  setTimeout(() => {
+    layer.setStyle({ fillOpacity: 0 });
+
+    const path = layer._path;
+    if (path) {
+      path.style.outline = 'none';
+      path.style.pointerEvents = 'none';
+    }
+
+    const mapContainer = map.getContainer();
+    if (mapContainer) {
+      mapContainer.blur();
+    }
+
+    // 🧠 Load township via reusable function
+    loadTownship(
+      'manheim',
+      'Townships/Boundaries_Township_ManheimTownship_PA.geojson',
+      'Manheim Township',
+      '#ff8800'
+    );
+  }, 500);
+});
 
     function createWorldMask(feature) {
       const bounds = map.getBounds().pad(1);
