--- a/index.html
+++ b/index.html
@@ -962,52 +962,55 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
         });
 
         layer.on('click', function () {
-  map.fitBounds(layer.getBounds());
-  currentLayerDepth = 2;
-  updateBackButtonVisibility();
+          map.fitBounds(layer.getBounds());
+          currentLayerDepth = 2;
+          updateBackButtonVisibility();
 
-  insideLancaster = true;
-  lancasterLayer = layer;
+          insideLancaster = true;
+          lancasterLayer = layer;
 
-  if (!worldMask) {
-    worldMask = L.geoJSON(createWorldMask(feature), {
-      style: {
-        fillColor: '#cccccc',
-        fillOpacity: 0.7,
-        stroke: false,
-        pane: 'maskPane'
+          if (!worldMask) {
+            worldMask = L.geoJSON(createWorldMask(feature), {
+              style: {
+                fillColor: '#cccccc',
+                fillOpacity: 0.7,
+                stroke: false,
+                pane: 'maskPane'
+              }
+            }).addTo(map);
+
+            worldMask.eachLayer(layer => {
+              const el = layer.getElement();
+              if (el) el.style.pointerEvents = 'none';
+            });
+          }
+
+          setTimeout(() => {
+            layer.setStyle({ fillOpacity: 0 });
+
+            const path = layer._path;
+            if (path) {
+              path.style.outline = 'none';
+              path.style.pointerEvents = 'none';
+            }
+
+            const mapContainer = map.getContainer();
+            if (mapContainer) {
+              mapContainer.blur();
+            }
+
+            // 🧠 Load township via reusable function
+            loadTownship(
+              'manheim',
+              'Townships/Boundaries_Township_ManheimTownship_PA.geojson',
+              'Manheim Township',
+              '#ff8800'
+            );
+          }, 500);
+        });
       }
     }).addTo(map);
-
-    worldMask.eachLayer(layer => {
-      const el = layer.getElement();
-      if (el) el.style.pointerEvents = 'none';
-    });
-  }
-
-  setTimeout(() => {
-    layer.setStyle({ fillOpacity: 0 });
-
-    const path = layer._path;
-    if (path) {
-      path.style.outline = 'none';
-      path.style.pointerEvents = 'none';
-    }
-
-    const mapContainer = map.getContainer();
-    if (mapContainer) {
-      mapContainer.blur();
-    }
-
-    // 🧠 Load township via reusable function
-    loadTownship(
-      'manheim',
-      'Townships/Boundaries_Township_ManheimTownship_PA.geojson',
-      'Manheim Township',
-      '#ff8800'
-    );
-  }, 500);
-});
+  }); // ✅ THIS LINE WAS MISSING
 
     function createWorldMask(feature) {
       const bounds = map.getBounds().pad(1);
