--- a/index.html
+++ b/index.html
@@ -1010,6 +1010,18 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
         });
       }
     }).addTo(map);
+    // Restore road visibility after county polygon loads
+Object.values(nameToLayers).flat().forEach(layer => {
+  if (layer.options.pane === 'hiddenRoads') {
+    layer.setStyle({
+      color: 'black',
+      weight: 4,
+      opacity: 1,
+      pane: 'hiddenRoads'
+    });
+  }
+});
+
   }); // ✅ THIS LINE WAS MISSING
 
     function createWorldMask(feature) {
