--- a/index.html
+++ b/index.html
@@ -1003,21 +1003,23 @@ fetch('Counties/Boundaries_County_Lancaster_PA.geojson')
   'manheim',
   'Townships/Boundaries_Township_ManheimTownship_PA.geojson',
   'Manheim Township',
-  '#ff8800',
-  () => {
-    // ✅ Now safe to apply styles – roads are guaranteed loaded
-    Object.values(nameToLayers).flat().forEach(layer => {
-      if (layer.options.pane === 'hiddenRoads') {
-        layer.setStyle({
-          color: 'black',
-          weight: 4,
-          opacity: 1,
-          pane: 'hiddenRoads',
-        });
-      }
-    });
-  } // 👈 this closes the callback
-);    // 👈 this closes the full loadTownship(...) function call
+  '#ff8800'
+);
+
+// 🧠 Apply styling 500ms later (after roads are likely loaded)
+setTimeout(() => {
+  Object.values(nameToLayers).flat().forEach(layer => {
+    if (layer.options.pane === 'hiddenRoads') {
+      layer.setStyle({
+        color: 'black',
+        weight: 4,
+        opacity: 1,
+        pane: 'hiddenRoads',
+      });
+    }
+  });
+}, 500);
+
 
 
 
